--- a/templates/base.html
+++ b/templates/base.html
@@ -27,12 +27,28 @@
         </div>
     </div>
 
+    
+    <div class="body">
     <!--Side image-->
     <div class="sideimage">
         <img src = "estate.jpg" alt="Houses">
     </div>
 
     <!--side signup form-->
+    <div class="form">
+    <form>
+        <h3>Sign in as Landlord</h3>
+        <input type="text" name= "username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <p>Forgot password?<a href="forgot.html">Click here</a></a></p>
+        <input type="button" name = "login" value = "login">
 
+        <hr>
+        <p>Don't have an account><a href="signup">Sign Up</a></a></p>
+
+    </form>
+    </div>
+
+    </div>
 </body>
 </html>
