--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href = "base.css" \>
 </head>
 <body>
+    
     <!--topbar-->
     <div class="topbar">
         <!-- logo-->
@@ -28,27 +29,22 @@
     </div>
 
     
-    <div class="body">
-    <!--Side image-->
-    <div class="sideimage">
-        <img src = "estate.jpg" alt="Houses">
-    </div>
-
-    <!--side signup form-->
     <div class="form">
     <form>
-        <h3>Sign in as Landlord</h3>
-        <input type="text" name= "username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
+        <h3>Sign in</h3>
+        <input type="text" name= "username" class = "username" placeholder="Username"><br>
+        <p></p>
+        <input type="password" name="password" placeholder="Password" class="pwd">
         <p>Forgot password?<a href="forgot.html">Click here</a></a></p>
-        <input type="button" name = "login" value = "login">
+        <input type="button" name = "login" value = "Login" class="login">
 
         <hr>
-        <p>Don't have an account><a href="signup">Sign Up</a></a></p>
+        <p>Don't have an account?<a href="signup">Sign Up</a></a></p>
+    
 
     </form>
     </div>
 
-    </div>
+    
 </body>
 </html>
