--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,12 +1,14 @@
 body{
     margin: 0 0 0 0;
-    background: url('estate.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
     height: 100%;
     width: 100%;
 }
-
+.wholebody{
+    background: url('estate.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
 .logo{
     padding: 5px;
 
