--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RTMS - Manage tenants</title>
+    
     <link rel="stylesheet" href = "static\css\base.css" \>
 </head>
 <body>
+    <div class="wholebody">
+        <!--topbar-->
+        <div class="topbar">
+            <!-- logo-->
+            <div class="logo">
+                <img src="static\images\loogo.png">
+            </div>
+    
+            <!--nav buttons-->
+            <div class="navbar">
+                <ul class="nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/landlords">Landlord</a></li>
+                    <li><a href="/tenants">Tenants</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="/about">About</a></li>
+                </ul>
+            </div>
+        </div>
     
 {% block content %}
 {% endblock %}
-    
+</div>    
 </body>
 </html>
