worked on about, changed titles, and made new base files(html,css)

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,25 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 {% block title %}RTMS - About{% endblock %}
 
 {% block content %}
+<div class="wholeabout">
+<img src = "static/images/picture.jpg" class="aboutpic">
+<div class="aboutinfo">
+    <h1 class="aboutme">About me</h1>
+    <p class = "text">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quidem optio quasi illum explicabo 
+    iure dolorem laboriosam veniam sunt 
+    ipsum earum, nisi molestias voluptatum minus sint molestiae maxime non itaque!
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur, voluptatibus. 
+    Labore inventore iste cumque autem dignissimos! Sint, distinctio numquam ipsa eius, 
+    delectus sunt quas iure praesentium dolor reprehenderit commodi hic.
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, incidunt! Repellendus, delectus harum, 
+    iure aperiam blanditiis molestias rerum qui et 
+    nostrum vero tempore incidunt quia ipsam? Ipsa commodi vero soluta.
+    </p>
+</div>
 
-
-
+</div>
 
 {% endblock %}
 
