--- a/templates/base2.html
+++ b/templates/base2.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block title %}{% endblock %}
-    <link rel="stylesheet" href = "static\css\base.css" \>
+    <link rel="stylesheet" href = "static\css\base2.css" \>
 </head>
 <body>
-    <div class="wholebody">
         <!--topbar-->
         <div class="topbar">
             <!-- logo-->
@@ -27,7 +26,6 @@
         </div>
     
 {% block content %}
-{% endblock %}
-</div>    
+{% endblock %}    
 </body>
 </html>
