--- a/static/css/base2.css
+++ b/static/css/base2.css
@@ -11,7 +11,6 @@ body{
 }
 .logo{
     padding: 5px;
-
     width: 17%;
     float: left;
     margin-left: 10%;
@@ -40,8 +39,9 @@ li{
 }
 
 .topbar{
-    border: solid 1px rgb(255, 255, 255);
+    border: solid 1px rgb(0, 0, 0);
     background-color: white;
+    margin-bottom: 0;
 }
 hr{
     width: 90%;
@@ -84,4 +84,30 @@ input{
 .aboutme{
     font-size: 10em;
     font-family:'Times New Roman', Times, serif;
+    border: solid 1px black;
+    padding-bottom: 0px;
+    margin: 0 0 0 0;
+}
+
+.aboutinfo{
+    width: 50%;
+    border: solid 1px black;
+    height: auto;
+    margin-top:8.5% ;
+}
+.text{
+    padding-top: 0px;
+    margin: 0 0 0 0;
+}
+
+.aboutpic{
+    height: 40%;
+    float: left;
+    width: 40%;
+}
+
+.wholeabout{
+    width: 100%;
+    height: auto;
+    border:solid 1px black;
 }
