--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
-{% block title %}RTMS - Contacts{% endblock %}
+{% extends 'base2.html' %}
 
 {% block content %}
+<h1 class="contactme">Reach Out..</h1>
+<h3 class="name">Raphael Wright Agbedanu</h3>
 
 
 {% endblock %}
