--- a/templates/index.html
+++ b/templates/index.html
@@ -6,19 +6,17 @@
 
 
     
-    <div class="form">
-    <form>
+    <div class="form" >
+    <form method="POST" action="/login">
         <h3>Sign in</h3>
         <input type="text" name= "username" class = "username" placeholder="Username"><br>
         <p></p>
         <input type="password" name="password" placeholder="Password" class="pwd">
         <p>Forgot password?<a href="forgot.html">Click here</a></a></p>
-        <input type="button" name = "login" value = "Login" class="login">
+        <input type="submit" name = "login" value = "Login" class="login">
 
         <hr>
-        <p>Don't have an account?<a href="signup">Sign Up</a></a></p>
-    
-
+        <p>Don't have an account?<a href="/signup">Sign Up</a></a></p>
     </form>
     </div>
 
