adding and connecting to database

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<form class="signup">
+<form class="signup" method="POST" action="">
     <p>
         <input type="text" name="uname" class="uname" placeholder="Username" required>
     </p>
