--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 
 
     
-    <div class="form" >
-    <form method="POST" action="/login">
+    <div class="form">
+    <form method="POST">
         <h3>Sign in</h3>
         <input type="text" name= "username" class = "username" placeholder="Username"><br>
         <p></p>
