--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,6 +15,8 @@
   </div>
   {% endfor %}
 
+  <a href="{{ url_for('loggout') }}">loggout</a>
+
 
   <h1>You're logged in</h1>
   <p>Hello this is the dashboard</p>
