--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="banner">
     <!-- greeting comes here -->
-    <h1>Hello {{fname}}</h1>
+    <h1>Hello {{username}}</h1>
 </div>
 
 <div class="belowbanner">
