--- a/templates/base3.html
+++ b/templates/base3.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome {{username}}</title>
+    <link rel="stylesheet" href="static\css\base3.css" />
 </head>
 <body>
-    
+     <!--topbar-->
+     <div class="topbar">
+        <!-- logo-->
+        <div class="logo">
+            <img src="static\images\loogo.png">
+        </div>
+
+        <!--nav buttons-->
+        <div class="navbar">
+            <ul class="nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/timeleft">Time Left</a></li>
+                <li><a href="/announcements">Announcements</a></li>
+                <li><a href="/aboutlandlord">About Landlord</a></li>
+            </ul>
+        </div>
+    </div>
+{% block content %}
+{% endblock %}
 </body>
 </html>
