--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
         <input type="password" name="password" placeholder="Password" class="pwd">
         <p>Forgot password?<a href="forgot.html">Click here</a></a></p>
         <input type="submit" name = "login" value = "Login" class="login">
+        <p>Landlord? <a href="landlordlogin.html">Sign In</a></p>
 
         <hr>
         <p>Don't have an account?<a href="/signup">Sign Up</a></a></p>
