made some minor changes

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,6 +39,10 @@
         <input type="password" name="pwd" class="pwd" placeholder="Password" required>
     </p>
 
+    <p>
+        <span>Tenant<input type = "radio" name="client-type" class="radioo"> &nbsp &nbsp Owner<input type="radio" name="client-type" class="radioo"></span>
+    </p>
+
     <input type="submit" name="submit" value="Sign Up" class="signup">
 </form>
 
