--- a/static/css/base2.css
+++ b/static/css/base2.css
@@ -47,13 +47,13 @@ hr{
     width: 90%;
 }
 
-.form{
+/* .form{
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     min-height: 100vh;
-}
+} */
 
 
 h3{
@@ -90,12 +90,7 @@ input{
     margin-top:5.8% ;
     margin-left: 10%;
 }
-.text{
-    padding-top: 0px;
-    padding-left: 8px;
-    margin: 0 0 0 0;
-    width: 70%;
-}
+
 
 .contactme{
     font-size: 11.5em;
@@ -107,10 +102,23 @@ input{
     font-size: 5em;
 }
 .signup{
-width: 100px;
-font-size: larger;
-padding: 5px;
-border-radius: 20px;
+    font-size: large;
+    padding: 5px;
+    border-radius: 20px;
+    position: absolute;
+    top: 15%;
+    left: 40%;
 }
 
+.signupp{
+    width: 100%;
+    font-size: large;
+    padding: 5px;
+    border-radius: 20px;
+   
+}
+span{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+}
 
