--- a/app/static/css/base3.css
+++ b/app/static/css/base3.css
@@ -37,3 +37,18 @@ li{
     background-color: white;
     margin-bottom: 0;
 }
+
+.banner{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: larger;
+    width: 100%;
+    height: 300px;
+    border: solid 1px black;
+    background-image: url('banner.jpg');
+    background-size: cover;
+    color: white;
+}
+
+.banner h1{
+    padding-left: 20px;
+}
